# lid-vocab

./: .gitignore  README.md  pyproject.toml
data/: answers-reviewed.json  translation-cache.json  vocabulary-blacklist.txt
plans/: 2026-04-26-leben-vocab-python-project.md
scripts/: notebook_to_pdf.py  translate_notebook_deepl.py  update_notebook_note_style.py
src/leben_vocab/: __init__.py  answers.py  blacklist.py  cli.py  corpus.py  csv_export.py  export.py  merge.py  notebook.py  official_corpus.py  translation.py  vocabulary.py
tests/: test_answer_matching.py  test_blacklist.py  test_cli_export.py  test_export.py  test_merge.py  test_notebook.py  test_official_corpus.py  test_project_metadata.py  test_translation.py  test_vocabulary_extraction.py
