[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leben-vocab"
version = "0.1.0"
description = "Export Leben in Deutschland vocabulary study CSVs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
    "deep-translator>=1.11",
    "german-nouns>=1.2.5; python_version < '3.14'",
    "pymupdf>=1.27",
    "python-dotenv>=1",
    "spacy>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
leben-vocab = "leben_vocab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leben_vocab"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
